# dota

./: .gitignore  EXAMPLES_README.md  README.md  TODO.md  autoencoders.py  best.h5  clustering.py  data.json  dataset.ipynb  dataset.py  dataset_analysis.ipynb  dataset_test.ipynb  dota.py  dota_autoencoder_permutations.csv  embedding.py  example_autoencoder_usage.py  files.py  head.json  heroes.py  heroes_analysis.ipynb  leagues.py  main.py  matches.py  model.py  notebook.ipynb  notebook_cluster.ipynb  notebook_clusterv1.ipynb  notebook_loss.ipynb  notebook_v1.html  notebook_v2.html  notebook_v4.html  objectives.py  patches.py  permutations.py  players.py  plot.py  pyproject.toml  relatorio.txt  relatorio_final.txt  save.py  (+35 more)
artigo/: .chktexrc  artigo.aux  artigo.bbl  artigo.bib  artigo.blg  artigo.bst  artigo.fdb_latexmk  artigo.fls  artigo.sty  artigo.tex  ref_dec.md  scratch.md
dataset/: dataset.py  files.py  headers.py  patches.py
dota/: __init__.py  autoencoder.py  dataset.py  dataset_helper.py  dataset_schema.py  dota.py  dota_columns.py  dota_schema.py  keras_ae.py  logger.py  schemas.py
dota2_data/: dataset_schema.json  heroes_schema.json  leagues_schema.json  metadata_schema.json  patches_schema.json
models/: ti_2021_4_best_model.h5  ti_2021_4_loss_history.csv  ti_2021_8_autoencoder.h5  ti_2021_8_best_model.h5  ti_2021_8_loss_history.csv  ti_2021_autoencoder.h5  ti_2022_2_loss_history.csv  ti_2022_3_autoencoder.h5  ti_2022_3_loss_history.csv  ti_2022_4_autoencoder.h5  ti_2022_8_autoencoder.h5  ti_2022_8_best_model.h5  ti_2022_8_loss_history.csv  ti_2022_autoencoder.h5  ti_2022_best_model.h5  ti_2022_loss_history.csv  ti_2023_2_autoencoder.h5  (+12 more)
(+47 files in other folders)
