[project]
name = "dota2"
version = "0.1.0"
description = "Dota 2 The International Games Cluster Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdbscan>=0.8.40",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "kagglehub[polars-datasets]>=0.3.12",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]
